Bug 273887 - A double click on the memo or the amount in the split editor causes duplicate focus and selection
Summary: A double click on the memo or the amount in the split editor causes duplicate...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-22 19:54 UTC by Cristian Oneț
Modified: 2011-05-22 20:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cristian Oneț 2011-05-22 19:54:41 UTC
Version:           SVN trunk (using KDE 4.6.3) 
OS:                Linux

When editing an entry with double click, if the user wants to edit anything other then the category he will get two entries focused/selected which is a bit confusing.

Reproducible: Always

Steps to Reproduce:
1. Open the split editor
2. Double click on the amount column


Actual Results:  
The amount edit and the category edit will be focused/selected

Expected Results:  
Only the amount edit should be focused/selected

OS: Linux (x86_64) release 2.6.37-gentoo-r4
Compiler: x86_64-pc-linux-gnu-gcc
Comment 1 Cristian Oneț 2011-05-22 19:57:59 UTC
http://kmymoney2.sourceforge.net/screencasts/bug_273887.ogv
A short movie that captures the problem.
Comment 2 Cristian Oneț 2011-05-22 20:01:53 UTC
SVN commit 1233112 by conet:

BUG: 273887

1. On double click call createEditWidgets directly with setFocus=false to avoid setting the focus on the category widget
2. Set the focus and select all depending on the column being clicked on
3. By set focus we mean set focus and select all

 M  +10 -8     kmymoneysplittable.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1233112