BUG: 273887

1. On double click call createEditWidgets directly with setFocus=false to avoid setting the focus on the category widget
2. Set the focus and select all depending on the column being clicked on
3. By set focus we mean set focus and select all

svn path=/trunk/extragear/office/kmymoney/; revision=1233112